--- a/index.html
+++ b/index.html
@@ -293,6 +293,32 @@
         padding: 2rem 0;
         margin-top: 3rem;
     }
+    @media (max-width: 768px) {
+        .nav-links {
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .umkm-cards {
+            flex-direction: column; /* Menyusun card secara vertikal */
+        }
+
+        .umkm-card {
+            max-width: 100%; /* Membuat card lebih lebar di perangkat kecil */
+        }
+
+        header {
+            padding: 1rem;
+        }
+
+        main {
+            padding: 1rem;
+        }
+
+        .section h2 {
+            font-size: 1.6rem;
+        }
+    }
   </style>
 </head>
 <body>
