--- a/index.html
+++ b/index.html
@@ -293,30 +293,54 @@
         padding: 2rem 0;
         margin-top: 3rem;
     }
+    /* CSS untuk perangkat kecil, mengoptimalkan kartu dan elemen */
     @media (max-width: 768px) {
+        /* Navigasi */
         .nav-links {
             flex-direction: column;
             gap: 1rem;
         }
 
+        /* Hero Section */
+        .hero-content h1 {
+            font-size: 3rem;
+        }
+        
+        /* Kartu UMKM */
         .umkm-cards {
-            flex-direction: column; /* Menyusun card secara vertikal */
+            flex-direction: column;
+            align-items: center;
         }
-
         .umkm-card {
-            max-width: 100%; /* Membuat card lebih lebar di perangkat kecil */
+            max-width: 100%;
+            margin: 1rem 0; /* Memberikan ruang antar card */
         }
 
-        header {
-            padding: 1rem;
+        /* Kegiatan Cards */
+        .kegiatan-cards {
+            flex-direction: column;
+            align-items: center;
+        }
+        .kegiatan-card {
+            max-width: 100%;
+            margin: 1rem 0;
         }
 
+        /* Section padding */
         main {
             padding: 1rem;
         }
 
         .section h2 {
-            font-size: 1.6rem;
+            font-size: 1.8rem;
+        }
+
+        .batas-wilayah {
+            padding: 0 10px; /* Padding lebih kecil untuk perangkat kecil */
+        }
+
+        .peta-img {
+            max-width: 100%; /* Responsif, agar gambar peta sesuai dengan layar */
         }
     }
   </style>
