--- a/index.html
+++ b/index.html
@@ -385,14 +385,14 @@
       <h2>UMKM Padukuhan Widoro</h2>
       <div class="umkm-cards">
         <div class="umkm-card">
-          <h3>Batik Gusti</h3>
-          <img src="images/widoro.png" alt="Batik Gusti">
+          <h3>Batik Setyowati</h3>
+          <img src="images/batik-setyowati.jpg" alt="Batik Gusti">
           <p>Alamat: RT 00, Padukuhan Widoro</p>
           <a href="umkm.html" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="umkm-card">
           <h3>Wedang Uwuh Bejo</h3>
-          <img src="images/widoro.png" alt="Wedang Uwuh Bejo">
+          <img src="images/wedang-uwuh-bejo.jpg" alt="Wedang Uwuh Bejo">
           <p>Alamat: RT 00, Padukuhan Widoro</p>
           <a href="umkm.html" class="lihat-detail">Lihat Detail</a>
         </div>
@@ -403,8 +403,8 @@
           <a href="umkm.html" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="umkm-card">
-          <h3>Tahu Murni HKM</h3>
-          <img src="images/widoro.png" alt="Tahu Murni HKM">
+          <h3>Jenang Gempol</h3>
+          <img src="images/jenang-gempol.jpg" alt="Tahu Murni HKM">
           <p>Alamat: RT 00, Padukuhan Widoro</p>
           <a href="umkm.html" class="lihat-detail">Lihat Detail</a>
         </div>
@@ -428,25 +428,25 @@
       <div class="kegiatan-cards">
         <div class="kegiatan-card">
           <h3>Posyandu</h3>
-          <img src="images/widoro.png" alt="Kegiatan A">
+          <img src="images/posyandu.jpg" alt="Kegiatan A">
           <p>Kegiatan posyandu ini dilaksanakan setiap satu bulan sekali di tanggal 5. Diikuti balita, dewasa, dan usia lanjut.</p>
           <a href="kegiatan.html" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="kegiatan-card">
           <h3>Bank Sampah</h3>
-          <img src="images/widoro.png" alt="Kegiatan B">
+          <img src="images/bank-sampah.jpg" alt="Kegiatan B">
           <p>Masyarakat dapat menyetorkan sampah yang sudah dipilah, seperti plastik ke bank sampah untuk ditukar dengan uang.</p>
           <a href="kegiatan.html" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="kegiatan-card">
           <h3>Arisan PKK</h3>
-          <img src="images/widoro.png" alt="Kegiatan C">
+          <img src="images/arisan-pkk.jpg" alt="Kegiatan C">
           <p>Arisan PKK merupakan kegiatan rutin ibu - ibu PKK yang dilaksanakan setiap satu bulan sekali.</p>
           <a href="kegiatan.html" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="kegiatan-card">
           <h3>TPQ Madin</h3>
-          <img src="images/widoro.png" alt="Kegiatan C">
+          <img src="images/tpq-madin.jpg" alt="Kegiatan C">
           <p>TPQ Madin merupakan lembaga pendidikan non-formal yang fokus pada pengajaran ilmu agama Islam. </p>
           <a href="kegiatan.html" class="lihat-detail">Lihat Detail</a>
         </div>
