--- a/kegiatan.html
+++ b/kegiatan.html
@@ -215,25 +215,25 @@
       <div class="kegiatan-cards">
         <div class="kegiatan-card">
           <h3>Posyandu</h3>
-          <img src="images/widoro.png" alt="Posyandu">
+          <img src="images/posyandu.jpg" alt="Posyandu">
           <p>Kegiatan posyandu ini dilaksanakan setiap satu bulan sekali di tanggal 5. Diikuti balita, dewasa, dan usia lanjut.</p>
           <a href="#" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="kegiatan-card">
           <h3>Bank Sampah</h3>
-          <img src="images/widoro.png" alt="Bank Sampah">
+          <img src="images/bank-sampah.jpg" alt="Bank Sampah">
           <p>Masyarakat dapat menyetorkan sampah yang sudah dipilah, seperti plastik ke bank sampah untuk ditukar dengan uang.</p>
           <a href="#" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="kegiatan-card">
           <h3>Arisan PKK</h3>
-          <img src="images/widoro.png" alt="Arisan PKK">
+          <img src="images/arisan-pkk.jpg" alt="Arisan PKK">
           <p>Arisan PKK merupakan kegiatan rutin ibu - ibu PKK yang dilaksanakan setiap satu bulan sekali.</p>
           <a href="#" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="kegiatan-card">
           <h3>TPQ Madin</h3>
-          <img src="images/widoro.png" alt="TPQ Madin">
+          <img src="images/tpq-madin.jpg" alt="TPQ Madin">
           <p>TPQ Madin merupakan lembaga pendidikan non-formal yang fokus pada pengajaran ilmu agama Islam.</p>
           <a href="#" class="lihat-detail">Lihat Detail</a>
         </div>
