--- a/umkm.html
+++ b/umkm.html
@@ -210,14 +210,14 @@
       <div class="divider"></div> <!-- Divider line -->
       <div class="umkm-cards">
         <div class="umkm-card">
-          <h3>Batik Gusti</h3>
-          <img src="images/widoro.png" alt="Batik Gusti">
+          <h3>Batik Setyowati</h3>
+          <img src="images/batik-setyowati.jpg" alt="Batik Gusti">
           <p>Alamat: RT 00, Padukuhan Widoro</p>
           <a href="#" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="umkm-card">
           <h3>Wedang Uwuh Bejo</h3>
-          <img src="images/widoro.png" alt="Wedang Uwuh Bejo">
+          <img src="images/wedang-uwuh-bejo.jpg" alt="Wedang Uwuh Bejo">
           <p>Alamat: RT 00, Padukuhan Widoro</p>
           <a href="#" class="lihat-detail">Lihat Detail</a>
         </div>
@@ -228,8 +228,8 @@
           <a href="#" class="lihat-detail">Lihat Detail</a>
         </div>
         <div class="umkm-card">
-          <h3>Tahu Murni HKM</h3>
-          <img src="images/widoro.png" alt="Tahu Murni HKM">
+          <h3>Jenang Gempol</h3>
+          <img src="images/jenang-gempol.jpg" alt="Tahu Murni HKM">
           <p>Alamat: RT 00, Padukuhan Widoro</p>
           <a href="#" class="lihat-detail">Lihat Detail</a>
         </div>
